# changelog-generator

./: CHANGELOG_TEST.md  LICENSE  README.md  add_remote.txt  branch.txt  changelog_gen.py  debug_output.txt  devto-article.md  export_html.py  fix.txt  git_url.txt  gumroad-description.md  index.js  pre-commit-hook.py  push_github.txt  push_github2.txt  pyproject.toml  remotes.txt  requirements.txt
ci/: github-actions-release.yml  gitlab-ci.yml
examples/: create_all_examples.sh  create_example_breaking.sh  create_example_monorepo.sh  create_example_simple.sh
templates/: html_template.html
