[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "changelog-gen"
version = "1.0.0"
description = "Generate CHANGELOG.md from conventional commit git history. Zero dependencies, stdlib only."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kidias25", email = "kidias25@example.com"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
keywords = ["changelog", "git", "conventional-commits", "cli", "release"]

[project.scripts]
changelog-gen = "changelog_gen:main"

[project.urls]
Homepage = "https://github.com/Kiendas25/changelog-generator"
Repository = "https://github.com/Kiendas25/changelog-generator"
Issues = "https://github.com/Kiendas25/changelog-generator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.py-modules]
changelog_gen = "changelog_gen.py"